--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NjE3NDAxMTM0NDYxNjE2MTg3.XWql1g.8xUQUNHBoLkIoYlPpyC3YxcgURE","client":"617401134461616187","tag":"!","case":"false","separator":"\\s+","ownerId":"600175064024875008"}
+{"token":"NTQxMDczMTE5OTk0MDUyNjI5.XXR6Lw.bHeOvWEK53T1O2nsgPvk2T6JCCA","client":"541073119994052629","tag":"%","case":"false","separator":"\\s+","ownerId":"251143265271808001"}
