--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NjE3NDAxMTM0NDYxNjE2MTg3.XXbesQ.F8Ij-gmEa2w2KIXyj_vC-BkBzmc","client":"617401134461616187","tag":"*","case":"false","separator":"\\s+","ownerId":"600175064024875008"}
+{"token":"BOT_TOKEN","client":"BOT_CLIENT_ID","tag":"BOT_PREFIX","case":"false","separator":"\\s+","ownerId":"YOUR_USER_ID"}
