--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"BOT_TOKEN","client":"BOT_CLIENT_ID","tag":"BOT_PREFIX","case":"false","separator":"\\s+","ownerId":"YOUR_USER_ID"}
+{"token":"NDkyODk5NDM3ODU3OTk2ODAx.XoMxsw.QaDTkSEAFhqqRcENoZ7zFGCHNLw","client":"492899437857996801","tag":"!","case":"false","separator":"\\s+","ownerId":"YOUR_USER_ID"}
